--- a/ES_PA_Capítulo_07_MT5_Trading_en_Vivo_Soporte_Resistencia_SMA_RSI.ipynb
+++ b/ES_PA_Capítulo_07_MT5_Trading_en_Vivo_Soporte_Resistencia_SMA_RSI.ipynb
@@ -168,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.6 ('ia')",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +182,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3850058cb9318b99b34f2356463c23897513403d1f04f2e0fc408b282c168631"
+   }
   }
  },
  "nbformat": 4,
